--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -13,6 +13,7 @@
             ],
             // "program": "${workspaceFolder}\\index.js"
             "program": "${file}",
+            "console" : "integratedTerminal",
         }
     ]
 }
